--- a/Decred Wallet/Features/Security/Security.storyboard
+++ b/Decred Wallet/Features/Security/Security.storyboard
@@ -235,7 +235,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.95294117649999999" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Fj4-AU-s5Z" firstAttribute="width" secondItem="NMs-Wa-sVv" secondAttribute="width" id="3mV-yr-CLi"/>
                             <constraint firstItem="Fj4-AU-s5Z" firstAttribute="leading" secondItem="MQk-Si-pOx" secondAttribute="leading" id="7Yt-PX-CvM"/>
