--- a/Decred Wallet/Features/Navigation Menu/NavigationMenu.storyboard
+++ b/Decred Wallet/Features/Navigation Menu/NavigationMenu.storyboard
@@ -15,7 +15,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="FY8-JR-Gjb">
             <objects>
                 <viewController id="1a9-IK-kXS" sceneMemberID="viewController">
@@ -24,29 +24,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8qr-hp-a1v">
-                                <rect key="frame" x="26" y="175" width="362" height="457"/>
+                                <rect key="frame" x="26" y="131.66666666666666" width="362" height="500.33333333333337"/>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_decred01_24px" translatesAutoresizingMaskIntoConstraints="NO" id="9wI-fm-qVV">
-                                <rect key="frame" x="25" y="83" width="22" height="18"/>
+                                <rect key="frame" x="25" y="39.666666666666664" width="22" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="NwR-E2-aoj"/>
                                     <constraint firstAttribute="width" constant="22" id="wTZ-qo-20Y"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zk-dC-bS3">
-                                <rect key="frame" x="64" y="82" width="83" height="20"/>
+                                <rect key="frame" x="62" y="82" width="83" height="20"/>
                                 <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 DCR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33j-GI-tXd">
-                                <rect key="frame" x="24" y="119" width="50" height="21"/>
+                                <rect key="frame" x="24" y="75.666666666666671" width="50" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Total Balance" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNk-IQ-jdA">
-                                <rect key="frame" x="24" y="144" width="126" height="18"/>
+                                <rect key="frame" x="24" y="100.66666666666667" width="126" height="18"/>
                                 <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="14"/>
                                 <color key="textColor" red="0.23999999999999999" green="0.34999999999999998" blue="0.45000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -100,41 +100,24 @@
                             <constraint firstAttribute="trailingMargin" secondItem="8qr-hp-a1v" secondAttribute="trailing" constant="6" id="Mmk-t7-1TJ"/>
                             <constraint firstItem="qB4-N3-A4X" firstAttribute="bottom" secondItem="e9a-0A-fsO" secondAttribute="bottom" constant="12" id="Nnh-Wh-zDw"/>
                             <constraint firstItem="33j-GI-tXd" firstAttribute="top" secondItem="9wI-fm-qVV" secondAttribute="bottom" constant="18" id="PQQ-aj-Pzg"/>
-                            <constraint firstItem="9wI-fm-qVV" firstAttribute="top" secondItem="qB4-N3-A4X" secondAttribute="top" constant="19" id="Sbs-XU-maT"/>
+                            <constraint firstItem="9wI-fm-qVV" firstAttribute="top" secondItem="qB4-N3-A4X" secondAttribute="top" constant="19.5" id="Sbs-XU-maT"/>
                             <constraint firstItem="8qr-hp-a1v" firstAttribute="centerX" secondItem="qB4-N3-A4X" secondAttribute="centerX" id="fsQ-fe-Mu6"/>
                             <constraint firstItem="33j-GI-tXd" firstAttribute="leading" secondItem="qB4-N3-A4X" secondAttribute="leading" constant="24" id="jzm-bv-7t0"/>
                             <constraint firstItem="0Zk-dC-bS3" firstAttribute="top" secondItem="qB4-N3-A4X" secondAttribute="top" constant="18" id="n4g-8B-M8N"/>
-                            <constraint firstItem="0Zk-dC-bS3" firstAttribute="leading" secondItem="9wI-fm-qVV" secondAttribute="trailing" constant="17" id="rZr-EQ-Qeu"/>
+                            <constraint firstItem="0Zk-dC-bS3" firstAttribute="leading" secondItem="9wI-fm-qVV" secondAttribute="trailing" constant="15" id="rZr-EQ-Qeu"/>
                             <constraint firstItem="GNk-IQ-jdA" firstAttribute="leading" secondItem="qB4-N3-A4X" secondAttribute="leading" constant="24" id="rky-uW-YdP"/>
                             <constraint firstItem="e9a-0A-fsO" firstAttribute="centerX" secondItem="qB4-N3-A4X" secondAttribute="centerX" id="tN5-Zv-gPO"/>
                             <constraint firstItem="GNk-IQ-jdA" firstAttribute="top" secondItem="33j-GI-tXd" secondAttribute="bottom" constant="4" id="zbv-C1-7jk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qB4-N3-A4X"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="zAq-Z6-lYX"/>
                     <navigationItem key="navigationItem" id="CqB-JA-qqu"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xUH-FH-haR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1968" y="-2435"/>
-        </scene>
-        <!--Overview-->
-        <scene sceneID="zC7-nU-pSk">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tCI-qX-sIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="00e-Sw-PF0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Overview" image="ic_overview01_24px" id="eQH-Du-Xmk"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Pxv-Za-m3l">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="1a9-IK-kXS" kind="relationship" relationship="rootViewController" id="5UW-lR-aRa"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="890" y="-2435"/>
+            <point key="canvasLocation" x="903" y="-2424"/>
         </scene>
         <!--Navigation Menu Controller-->
         <scene sceneID="dST-2d-9Tb">
@@ -147,10 +130,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="00e-Sw-PF0" kind="relationship" relationship="viewControllers" id="ClQ-rH-VP3"/>
                         <segue destination="Rs3-jK-8UV" kind="relationship" relationship="viewControllers" id="9DO-4V-Fpq"/>
                         <segue destination="lMB-XI-tNp" kind="relationship" relationship="viewControllers" id="w2n-zC-JbU"/>
                         <segue destination="PzC-7g-gdH" kind="relationship" relationship="viewControllers" id="gd8-ej-iQg"/>
+                        <segue destination="1a9-IK-kXS" kind="relationship" relationship="viewControllers" id="cYz-ZP-OHf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="58R-rO-jdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -213,7 +196,6 @@
         <image name="ic_accounts02_24px" width="8" height="8"/>
         <image name="ic_decred01_24px" width="8" height="8"/>
         <image name="ic_menu2_24px" width="8" height="8"/>
-        <image name="ic_overview01_24px" width="8" height="8"/>
         <image name="ic_receive_24px" width="8" height="8"/>
         <image name="ic_send_24px" width="8" height="8"/>
         <image name="ic_transactions02_24px" width="8" height="8"/>
